--- a/documents/references.bib
+++ b/documents/references.bib
@@ -1,3 +1,14 @@
+@article{hoffman1986,
+  title={Step-tracking movements of the wrist in humans. I. Kinematic analysis},
+  author={Hoffman, Donna S and Strick, Peter L},
+  journal={The Journal of neuroscience},
+  volume={6},
+  number={11},
+  pages={3309--3318},
+  year={1986},
+  publisher={Soc Neuroscience}
+}
+
 @article{Tsai1987,
   title={A versatile camera calibration technique for high-accuracy 3D machine vision metrology using off-the-shelf TV cameras and lenses},
   author={Tsai, Roger Y},
