--- a/documents/title.tex
+++ b/documents/title.tex
@@ -7,20 +7,23 @@
 \begin{titlepage}
 	\centering
 	\includegraphics[width=0.15\textwidth]{seas}\par\vspace{1cm}
-	{\scshape\LARGE Columbidae University \par}
 	\vspace{1cm}
-	{\scshape\Large Final year project\par}
-	\vspace{1.5cm}
-	{\huge\bfseries Pigeons love doves\par}
-	\vspace{2cm}
-	{\Large\itshape John Birdwatch\par}
-	\vfill
-	supervised by\par
-	Dr.~Mark \textsc{Brown}
+	{\large\bfseries The 3D Interaction Tool: \\ A Pointing Device for Virtual Reality Applications \par}
+	\vspace{1cm}
+	{\large A senior design project submitted in partial fulfillment of the requirements for the degree of Bachelor of Science in Engineering Sciences at Harvard University \par}
+	\vspace{1cm}
 
+    \vfill
+	{\large\itshape Lukas Gemar \par}
+	\vfill
+	\large Faculty Advisors: \\ Avi Uttamchandani and Krzysztof Gajos\par
 	\vfill
 
+	{\large\scshape Harvard University School of Engineering and Applied Science \par}
+	\vspace{0.3cm}
+	{\large\scshape Cambridge, MA \par}
+    \vspace{0.3cm}
 % Bottom of the page
-	{\large \today\par}
+	{\today\par}
 \end{titlepage}
 \end{document}
